# phasebridge

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
cli/: __init__.py  pb_decode.py  pb_encode.py  pb_kappa.py  pb_validate.py
docs/: cli_usage.md  overview.md  pif_format.md
examples/: image_roundtrip.py  timeseries_roundtrip.py
schemas/: pif_v1.json  pif_v1.yaml
src/phasebridge/: __init__.py  codec_s1.py  errors.py  kappa.py  pif.py  schema.py  utils.py
tests/: test_api_contract.py  test_binary_and_lazy.py  test_codec_s1.py  test_kappa_timeseries.py  test_roundtrip_bytes.py  test_schema.py  test_schema_pif.py
tests/property/: test_roundtrip_prop.py
